Changes in version 0.4.4
------------------------

* Added wildcard to generic parameter of Console select method.

* Added check to ensure that there is always at least one termination condition
  specified.


Changes in version 0.4.3
------------------------

* Introduced Utilities module.

* Extracted Uncommons Maths module into separate project
  (see https://uncommons-maths.dev.java.net).

* Added new constructor to BitString to simplify the creation of random bit
  strings.

* Improved algorithm for countSetBits() in BitString.  New version is
  significantly faster (10-15 times faster).

* Moved BitString class from Framework module into Uncommons Maths.

* Added new termination condition to detect when the evolution has stagnated
  (i.e. the fitness has not improved for a certain number of generations).

* Moved the the Swing-specific classes from the framework module into what was
  the Uncommons GUI module, which is now the Watchmaker Swing module.

* Introduced experimental Evolution Monitor Swing component.


Changes in version 0.4.2
------------------------

* Added a second parameter to the FitnessEvaluator interface to enable fitness
  calculations to take into account an individual's environment (the remainder
  of the population) when assigning a score.

* Minor tweak to improve the distribution of fitness evaluations between
  threads on multi-processor machines.

* Fix for ISSUE#3 (bad Throwable handling in InteractiveSelection and
  RendererAdapter)

* Made AbstractEvolutionEngine interruptible.

* Added new constructor to StandaloneEvolutionEngine to allow users to provide
  a custom ThreadFactory.

* Fix for ISSUE#4 (unreliable final result with non-natural fitness function).


Changes in version 0.4.1
------------------------

* Added new constructors to NumberGenerator implementations to enable the
  parameters to be dynamic.

* Several more unit tests for significantly improved coverage.  Fixed 2 minor
  bugs detected by these new tests.
