@@ -28,9 +28,9 @@ public class IfThenElseTest
     public void testIfBranch()
     {
         Node node = new IfThenElse();
-        node.setChildren(Arrays.asList(new Constant(1),
-                                       new Constant(5),
-                                       new Constant(10)));
+        node.setChildren(Arrays.<Node>asList(new Constant(1),
+                                             new Constant(5),
+                                             new Constant(10)));
         // Condition (1) is true, so result should be 5.
         double value = node.evaluate(new double[0]);
         assert value == 5 : "Wrong answer: " + value; 
@@ -41,9 +41,9 @@ public class IfThenElseTest
     public void testElseBranch()
     {
         Node node = new IfThenElse();
-        node.setChildren(Arrays.asList(new Constant(0),
-                                       new Constant(5),
-                                       new Constant(10)));
+        node.setChildren(Arrays.<Node>asList(new Constant(0),
+                                             new Constant(5),
+                                             new Constant(10)));
         // Condition (0) is true, so result should be 10.
         double value = node.evaluate(new double[0]);
         assert value == 10 : "Wrong answer: " + value; 
@@ -58,9 +58,9 @@ public class IfThenElseTest
     public void testTooManyChildren()
     {
         Node node = new IfThenElse();
-        node.setChildren(Arrays.asList(new Constant(0),
-                                       new Constant(5),
-                                       new Constant(10),
-                                       new Constant(15))); // 4 children should cause an exception.
+        node.setChildren(Arrays.<Node>asList(new Constant(0),
+                                             new Constant(5),
+                                             new Constant(10),
+                                             new Constant(15))); // 4 children should cause an exception.
     }
 }
